--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,16 @@ notifications:
   email:
     recipients:
       - 5minhominho@gmail.com
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: springboot-webservice-jar-container
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: public_read
+    wait-until-deployed: true
+    on:
+      repo: minomi/spring-boot-webservice
+      branch: master
